<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/WelcomeDescription" android:padding="16dp"></TextView>
    <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:stretchColumns="1">
        <TextView 
            android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/stats" android:gravity="center_horizontal"></TextView>
        
        <TableRow  android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_column="1"
             android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/MinimumGuess"></TextView>
            <TextView android:text="0" android:id="@+id/minimumGuess" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_column="1"
            android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/MaximumGuess"></TextView>
            <TextView android:text="0" android:id="@+id/maximumGuess" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_column="1"
            android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/AverageGuess"></TextView>
            <TextView android:text="0" android:id="@+id/averageGuess" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"></TextView>
        </TableRow>
    </TableLayout>
    <Button android:layout_width="match_parent" android:id="@+id/startGame" android:layout_height="wrap_content" android:text="@string/StartGame" android:layout_marginTop="10dp"></Button>
</LinearLayout>
